src/objects/IR__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Annual_UK__c</fullName>
        <label>Annual UK</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual__c</fullName>
        <label>Annual</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Default__c</fullName>
        <label>Monthly Default</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_UK__c</fullName>
        <label>Monthly UK</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Interest Rates</label>
</CustomObject>